--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-black">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/CodeNinjaBS/">
                 <img src="https://res.cloudinary.com/crunchbase-production/image/upload/c_lpad,f_auto,q_auto:eco,dpr_1/v1490942522/tirnqs0zeftudroq1ki6.png"
                     alt="" width="30" height="24" class="d-inline-block align-text-top">
                 <b style="color: honeydew;">CodeNinja</b>
@@ -51,14 +51,14 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/" style="color: honeydew;">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/CodeNinjaBS/" style="color: honeydew;">Home</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html" style="color: honeydew;">About</a>
+                        <a class="nav-link" href="/CodeNinjaBS/about.html" style="color: honeydew;">About</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="/CodeNinjaBS/" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: honeydew;">
                             Topics
                         </a>
@@ -76,7 +76,7 @@
             </li>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/contact.html" style="color: honeydew;">Contact Us</a>
+                <a class="nav-link" href="/CodeNinjaBS/contact.html" style="color: honeydew;">Contact Us</a>
             </li>
 
             </ul>
